# paraEigen

./: .gitignore  CMakeLists.txt  py-eigen.kdev4  python_eigen.cpp  setup.py  test.py
.conda/: meta.yaml  meta.yaml~
cmake/: FindPyEigen.cmake
packaging/conda/: meta.yaml
use_case/: radial_nurbs.py
